# dave

./: README.md
examples/dave_demo_launch/launch/: dave_nautilus.launch
mavros_bridge/: CMakeLists.txt  package.xml
mavros_bridge/launch/: mavros_bridge.launch
mavros_bridge/src/: mavros_bridge.py
models/dave_robot_models/models/glider_nautilus/: model.sdf
urdf/robots/glider_description/launch/: upload_glider_nautilus.launch
urdf/robots/glider_description/urdf/: glider_nautilus.xacro  glider_nautilus_default.urdf.xacro  glider_nautilus_sensors.xacro
