<?xml version="1.0"?>
<package format="2">
  <name>mavros_bridge</name>
  <version>3.1.1</version>
  <description>The mavros_bridge package</description>
  <author email="ryan.wueest@protonmail.com">Ryan Wüest</author>
  <maintainer email="ryan.wueest@protonmail.com">Ryan Wüest</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
